# oxide

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  README.md  VISION.md  oxide.toml.example
.oxide/: devices.json
.oxide/models/: model_index.json
.oxide/models/digit-detect/: v2.0.0.onnx
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/src/: main.rs
crates/oxide-cli/src/commands/: agent.rs  bench.rs  decrypt.rs  deploy.rs  device.rs  encrypt.rs  fleet.rs  info.rs  metrics.rs  mod.rs  run.rs  serve.rs
crates/oxide-cli/tests/: integration_tests.rs  stress_tests.rs
crates/oxide-control/: Cargo.toml
crates/oxide-control/src/: campaign.rs  fleet_manager.rs  lib.rs  model_store.rs  registry.rs  server.rs
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: config.rs  device.rs  error.rs  fleet.rs  lib.rs  metrics.rs  model.rs  telemetry.rs
crates/oxide-delta/: Cargo.toml  build.rs
crates/oxide-delta/src/: lib.rs  manifest.rs  patch.rs  test_util.rs
crates/oxide-delta/src/format/: mod.rs  onnx.rs  safetensors.rs
crates/oxide-delta/tests/: delta_tests.rs
crates/oxide-models/: Cargo.toml
crates/oxide-models/src/: lib.rs  onnx.rs
crates/oxide-network/: Cargo.toml
crates/oxide-network/src/: api.rs  lib.rs  ota.rs
crates/oxide-runtime/: Cargo.toml
crates/oxide-runtime/src/: engine.rs  health.rs  lib.rs  store.rs
crates/oxide-security/: Cargo.toml
crates/oxide-security/src/: encryption.rs  integrity.rs  lib.rs
docs/design/: agent-design.md  oxide-design.md  v2-delta-updates.md
docs/research/: 00-research-index.md  01-edge-ai-deployment-challenges.md  02-rust-for-edge-inference.md
models/: generate_benchmark_model.py  generate_test_models.py
models/test/: add_model.onnx  linear_model.onnx  mlp_mnist.onnx  mlp_mnist_v2.onnx  sigmoid_model.onnx
scripts/: _demo_inner.sh  demo.sh  gen_v2_model.py
tests/: e2e_control_plane.sh  e2e_inference.sh  run_all.sh
