[workspace]
members = [
    "crates/oxide-core",
    "crates/oxide-runtime",
    "crates/oxide-models",
    "crates/oxide-security",
    "crates/oxide-network",
    "crates/oxide-control",
    "crates/oxide-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Oxide Contributors"]

[workspace.dependencies]
# Internal crates
oxide-core = { path = "crates/oxide-core" }
oxide-runtime = { path = "crates/oxide-runtime" }
oxide-models = { path = "crates/oxide-models" }
oxide-security = { path = "crates/oxide-security" }
oxide-network = { path = "crates/oxide-network" }
oxide-control = { path = "crates/oxide-control" }

# Inference
tract-onnx = "0.21"
tract-core = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP / API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"

# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Data
bytes = "1"

# Compression
flate2 = "1"

# File watching
notify = "7"

# Metrics
prometheus-client = "0.23"

# Testing
tempfile = "3"

[profile.release]
opt-level = "z"       # Optimize for binary size
lto = true            # Link-Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # No unwinding = smaller binary
strip = true          # Strip debug symbols
