[package]
name = "oxide-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits, types, and configuration for the Oxide edge AI runtime"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
