[package]
name = "oxide-delta"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sha2 = { workspace = true }
zstd = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
