[package]
name = "oxide-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model format parsers and loaders for the Oxide edge AI runtime"

[dependencies]
oxide-core = { workspace = true }
tract-onnx = { workspace = true }
tract-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
