[package]
name = "oxide-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OTA update engine for atomic model deployment with rollback"

[dependencies]
oxide-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
