[package]
name = "oxide-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inference engine and model runtime for the Oxide edge AI runtime"

[dependencies]
oxide-core = { workspace = true }
oxide-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
