[package]
name = "oxide-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encryption, attestation, and security for the Oxide edge AI runtime"

[dependencies]
oxide-core = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
